--- a/Fridge/Fridge/Web.config
+++ b/Fridge/Fridge/Web.config
@@ -11,8 +11,8 @@
   </configSections>
 
   <connectionStrings>
-    <!--<add name="FridgeDB" connectionString="Data Source=VLADICK;Initial Catalog=Fridge;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-  <add name="FridgeDB" connectionString="Server=tcp:w0bs9aso16.database.windows.net,1433;Database=s123sDB;User ID=vlad@w0bs9aso16;Password={your_password_here};Trusted_Connection=False;Encrypt=True;Connection Timeout=30" providerName="System.Data.SqlClient" />
+    <add name="FridgeDB" connectionString="Data Source=VLADICK;Initial Catalog=Fridge;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <!--<add name="FridgeDB" connectionString="Server=tcp:w0bs9aso16.database.windows.net,1433;Database=s123sDB;User ID=vlad@w0bs9aso16;Password={your_password_here};Trusted_Connection=False;Encrypt=True;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   
   <appSettings>
