--- a/Fridge/Fridge/packages.config
+++ b/Fridge/Fridge/packages.config
@@ -18,8 +18,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net46" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net46" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net46" />
   <package id="Unity.WebAPI" version="5.1" targetFramework="net46" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
