- Добавил запрос NewProductAdd

--- a/Fridge/Fridge/Fridge.csproj
+++ b/Fridge/Fridge/Fridge.csproj
@@ -198,7 +198,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -225,9 +224,12 @@
     <Compile Include="Models\Concrete\Entities\User.cs" />
     <Compile Include="Models\Concrete\Entities\UserProduct.cs" />
     <Compile Include="Models\Concrete\FridgeContext.cs" />
+    <Compile Include="Models\Concrete\Product\NewProductAddInput.cs" />
+    <Compile Include="Models\Concrete\Product\NewProductAddOutput.cs" />
     <Compile Include="Models\Concrete\Product\ProductSearchInput.cs" />
     <Compile Include="Models\Concrete\Product\ProductSearchOutput.cs" />
     <Compile Include="Models\Concrete\Repositories\ProductRepository.cs" />
+    <Compile Include="Models\Concrete\Repositories\UserProductRepository.cs" />
     <Compile Include="Models\Concrete\Repositories\UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\UnityResolver.cs" />
