--- a/Fridge/Fridge/Fridge.csproj
+++ b/Fridge/Fridge/Fridge.csproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Recipes\" />
     <Folder Include="Views\Success\" />
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +198,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\RecipesController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -230,8 +232,11 @@
     <Compile Include="Models\Concrete\FridgeContext.cs" />
     <Compile Include="Models\Concrete\Product\NewProductAddInput.cs" />
     <Compile Include="Models\Concrete\Product\NewProductAddOutput.cs" />
+    <Compile Include="Models\Concrete\Product\ProductAddInput.cs" />
+    <Compile Include="Models\Concrete\Product\ProductAddOutput.cs" />
     <Compile Include="Models\Concrete\Product\ProductSearchInput.cs" />
     <Compile Include="Models\Concrete\Product\ProductSearchOutput.cs" />
+    <Compile Include="Models\Concrete\Repositories\FridgeRepository.cs" />
     <Compile Include="Models\Concrete\Repositories\ProductRepository.cs" />
     <Compile Include="Models\Concrete\Repositories\UserProductRepository.cs" />
     <Compile Include="Models\Concrete\Repositories\UserRepository.cs" />
