--- a/Fridge/Fridge/Fridge.csproj
+++ b/Fridge/Fridge/Fridge.csproj
@@ -258,7 +258,9 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Pictures\pic1.png" />
+    <Content Include="Content\Pictures\a.png" />
+    <Content Include="Content\Pictures\b.jpg" />
+    <Content Include="Content\Pictures\c.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
