- Добавил запрос на добавление продукта - если известно имя категории

--- a/Fridge/Fridge/Fridge.csproj
+++ b/Fridge/Fridge/Fridge.csproj
@@ -236,6 +236,8 @@
     <Compile Include="Models\Concrete\Product\AmountChangeOutput.cs" />
     <Compile Include="Models\Concrete\Product\NewProductAddInput.cs" />
     <Compile Include="Models\Concrete\Product\NewProductAddOutput.cs" />
+    <Compile Include="Models\Concrete\Product\NewProductCategoryAddInput.cs" />
+    <Compile Include="Models\Concrete\Product\NewProductCategoryAddOutput.cs" />
     <Compile Include="Models\Concrete\Product\ProductAddInput.cs" />
     <Compile Include="Models\Concrete\Product\ProductAddOutput.cs" />
     <Compile Include="Models\Concrete\Product\ProductSearchInput.cs" />
